--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mocha": "^6.2.0"
   },
   "dependencies": {
-    "bluebird": "^3.5.5"
+    "bluebird": "^3.5.5",
+    "js-yaml": "^3.13.1"
   }
 }
